--- a/src/templates/settings/sections/_edit.twig
+++ b/src/templates/settings/sections/_edit.twig
@@ -58,11 +58,11 @@
         required: true
     }) }}
 
-    {{ forms.checkboxField({
+    {{ forms.lightswitchField({
         label: 'Enable versioning for entries in this section'|t('app'),
         id: 'enableVersioning',
         name: 'enableVersioning',
-        checked: section.enableVersioning
+        on: section.enableVersioning
     }) }}
 
     {{ forms.selectField({
