--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -2644,7 +2644,7 @@ h2 + .actions {
   table.data {
     th,
     td {
-      &:first-child:not(.checkbox-cell) {
+      &:first-child:not(.checkbox-cell):not(.vuetable-th-slot-checkbox) {
         @include padding-left(
           var(--pane-padding, var(--pane-x-padding-default))
         );
@@ -2703,7 +2703,8 @@ table {
       padding-right: 12px;
       box-sizing: border-box;
 
-      &.checkbox-cell {
+      &.checkbox-cell,
+      &.vuetable-th-slot-checkbox {
         width: var(--checkbox-size) !important;
         min-width: var(--checkbox-size);
         box-sizing: content-box;
