Fixed selected tab memory when switching sites
https://github.com/craftcms/cms/issues/4018#issuecomment-1959169814

--- a/src/templates/_includes/revisionmenu.twig
+++ b/src/templates/_includes/revisionmenu.twig
@@ -81,6 +81,7 @@
     {% endtag %}
     {% tag 'button' with {
         type: 'button',
+        id: 'context-btn',
         class: [
             'context-btn',
             'btn',
